hphp/hack/test/typecheck/reactive/mutable_or_immutable1.php
<?hh // strict

// ERROR: __MaybeMutable is not allowed on functions
<<__MaybeMutable>>
function f(): int {
  return 1;
}
